[package]
name = "proc_mem"
version = "0.1.1"
authors = ["ZesaHG <info@highlight-germany.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZesaHG/ProcMem.git/"
description = "manage processes, modules and read/write their memory on windows"
readme = "README.md"
publish = true
keywords = ["process", "module", "read-write", "memory", "patternscan"]
categories = ["accessibility", "memory-management", "os::windows-apis", "games"]

[dependencies]
regex = "1.8.1"
winapi = {version = "^0.3.9", features = ["handleapi","tlhelp32", "memoryapi", "processthreadsapi", "psapi", "winbase"]}

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]